# transparent-input

./: .gitignore  justfile
browser-plugin/: .gitignore  content.js  manifest.json  package-lock.json  package.json  page-world.js  web-ext-config.mjs  wxt.config.ts
django-backend/: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  railway.toml  render.yaml
django-backend/backend/: settings.py  urls.py
django-backend/deploy/: gunicorn.service  nginx.conf
django-backend/doc/issues/: collection.md
django-backend/vocab/: admin.py  apps.py  models.py  public_urls.py  serializers.py  tasks.py  urls.py  views.py
django-backend/vocab/lib/: llm.py  segmentation.py  subtitles.py
django-backend/vocab/management/commands/: backfill_titles.py  import_backup.py  import_vocab.py  install_argos_models.py
django-backend/vocab/migrations/: 0001_initial.py  0002_alter_video_segments_processingjob.py  0002_drop_language_model.py  0002_remove_accounts.py  0003_alter_videotranslation_unique_together_and_more.py  0003_remove_worker.py  0003_seed_vietnamese_language.py  0004_videotranslation.py  0005_rename_target_language_videotranslation_native_language_and_more.py  0006_video_title.py
django-backend/vocab/pipelines/: __init__.py  italian.py  translation.py  vietnamese.py
django-backend/vocab/templates/vocab/: base.html  home.html  landing.html  language-select.html  login.html  profile.html  register.html  request_video.html  video-player.html  videos.html
django-backend/vocab/views/: __init__.py  accounts.py  api.py  home.py  request_video.py  videos.py
(+33 files in other folders)
