[project]
name = "django-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "django-cors-headers>=4.7.0",
    "celery[redis]>=5.4",
    "spacy>=3.8",
    "argostranslate>=1.9",
    "underthesea>=6.8",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "whitenoise>=6.9",
]
